<resources>
    <string name="app_name">Eyesthetic</string>

    <!--  LANDING  -->
    <string name="landing_welcome">Welcome!</string>
    <string name="landing_message">I am your &lt;b&gt;EYES-thetic&lt;/b&gt; assistant to help you with your fashion needs!</string>
    <string name="landing_button">Try it now!</string>

    <!--  LOGIN & REGISTER  -->
    <string name="login_heading">Welcome back!</string>
    <string name="login_subheading">Login to your account</string>
    <string name="login_button">Login</string>
    <string name="login_redirect">Don\'t have an account? Sign up!</string>
    <string name="login_emailLabel">Enter your email</string>
    <string name="login_emailTb">Textbox for email</string>

    <string name="register_heading">Create an account!</string>
    <string name="register_subheading">Sign up now</string>
    <string name="register_email">Email</string>
    <string name="register_emailTooltip">Enter email</string>
    <string name="register_button">Sign up</string>
    <string name="register_redirect">Already have an account? Login now!</string>

    <string name="logreg_forgot">Forgot password?</string>
    <string name="logreg_email">Email</string>
    <string name="logreg_password">Password</string>
    <string name="logreg_emailTooltip">Enter email</string>
    <string name="logreg_passwordTooltip">Enter password</string>
    <string name="logreg_username">Username</string>
    <string name="logreg_usernameTooltip">Enter username</string>



    <!--  NAVBAR  -->
    <string name="home">Home</string>
    <string name="closet">Closet</string>
    <string name="favorites">Favorites</string>

    <!--  HOMEPAGE  -->
    <string name="home_welcome">Welcome!</string>
    <string name="home_startque">What are you looking for?</string>
    <string name="home_random">Random Recommendation</string>
    <string name="home_closet">Recommendation from Closet</string>
    <string name="home_gender">Choose Gender: </string>
    <string name="home_genderTooltip">Gender</string>
    <string name="home_season">Choose Season: </string>
    <string name="home_seasonTooltip">Season</string>
    <string name="home_usage">Choose Usage: </string>
    <string name="home_usageTooltip">Usage</string>
    <string name="home_recBtn">Get Recommendations</string>

    <!--  VIRTUAL CLOSET  -->
    <string name="closet_heading">Your closet</string>
    <string name="closet_top">Tops</string>
    <string name="closet_bottom">Bottoms</string>
    <string name="closet_addItems">Add Items</string>
    <string name="closet_addDesc">How would you like to add items to your closet?</string>
    <string name="closet_takePhoto">Take a Photo</string>
    <string name="closet_upload">Upload Image</string>


    <!--  CLOSET DETAILS  -->
    <string name="closetDetail_Image">Image Placeholder</string>
    <string name="closetDetail_Name">Name</string>
    <string name="closetDetail_Color">Color</string>
    <string name="closet_additionalDetails">Additional Details:</string>
    <string name="closetDetail_Save">Save</string>
    <string name="closetDetail_Delete">Delete</string>
    <string name="closetDetail_Edit">Edit</string>
    <string name="closetDetail_Cancel">Cancel</string>

    <!--  FAVORITES & RECOMMENDATIONS -->
    <string name="favrec_recHeading">Recommendation</string>
    <string name="favrec_favHeading">Favorites</string>
    <string name="favrec_prevDesc">Previous favorite</string>
    <string name="favrec_nextDesc">Next favorite</string>
    <string name="rec_prevDesc">Previous recommendation</string>
    <string name="rec_nextDesc">Next recommendation</string>
    <string name="favrec_iconDesc">Favorites Button</string>
    <string name="favrec_combo">Combo: </string>
    <string name="favrec_bottom">Bottom: </string>
    <string name="favrec_desc">Description: </string>
    <string name="fav_unfav">Remove Favorite</string>

</resources>