<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:padding="24dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/logreg_box"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/loginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_heading"
            android:fontFamily="@font/inter_bold"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/loginSubheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subheading"
            android:fontFamily="@font/inter_regular"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/md_theme_onSurfaceVariant"/>

        <TextView
            android:id="@+id/loginPromptUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/logreg_username"
            android:layout_gravity="start"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logreg_usernameTooltip"
            android:background="@drawable/input_box"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loginPromptPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/logreg_password"
            android:layout_gravity="start"
            android:fontFamily="@font/inter_bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logreg_passwordTooltip"
            android:background="@drawable/input_box"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/logreg_forgot"
            android:onClick="resetPassword"
            android:textColor="@color/md_theme_outline"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/md_theme_primaryContainer"
            android:text="@string/login_button"
            android:textColor="@color/md_theme_onSurfaceVariant"
            android:textSize="16sp"
            android:fontFamily="@font/inter_bold"
            android:elevation="2dp"
            android:onClick="toLogin"
            app:strokeWidth="2dp"
            app:strokeColor="@color/md_theme_onSurfaceVariant" />

        <TextView
            android:id="@+id/registerRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/login_redirect"
            android:onClick="registerRedirect"
            android:textColor="@color/md_theme_outline"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>