<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homepage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingBottom="32dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp" >

        <TextView
            android:id="@+id/homeWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="start"
            android:paddingTop="24dp"
            android:text="@string/home_welcome"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/homeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingStart="32dp"
            android:paddingTop="20dp"
            android:paddingEnd="32dp"
            android:paddingBottom="20dp"
            android:text="@string/landing_message"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/homeQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_medium"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="12dp"
            android:text="@string/home_startque"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            android:layout_margin="12dp"
            app:singleSelection="true"
            app:selectionRequired="true">

            <Button
                android:id="@+id/randomRec"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"

                android:text="Random"
                android:textAlignment="center" />
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/closetRec"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLines="4"
                android:text="From Closet"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/homePromptGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/home_gender"
            android:fontFamily="@font/inter_bold"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/homeGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/home_genderTooltip"
            android:layout_marginTop="8dp"
            android:background="@drawable/alt_filled_box"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/homePromptSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/home_season"
            android:fontFamily="@font/inter_bold"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/homeSeason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/home_seasonTooltip"
            android:layout_marginTop="8dp"
            android:background="@drawable/alt_filled_box"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/homePromptUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/home_usage"
            android:fontFamily="@font/inter_bold"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/homeUsage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/home_usageTooltip"
            android:layout_marginTop="8dp"
            android:background="@drawable/alt_filled_box"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/getRecBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/md_theme_primaryContainer"
            android:text="@string/home_recBtn"
            android:textColor="@color/md_theme_onSurfaceVariant"
            android:textSize="16sp"
            android:fontFamily="@font/inter_bold"
            android:elevation="2dp"
            android:onClick="getRec"
            app:strokeWidth="2dp"
            app:strokeColor="@color/md_theme_onSurfaceVariant" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/homeNavbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:elevation="24dp"
        android:orientation="horizontal"
        android:background="@color/md_theme_primaryContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/eyesthetic_navbar"
        app:labelVisibilityMode="labeled"/>

</androidx.constraintlayout.widget.ConstraintLayout>