<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/closet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/fullCloset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp" >

        <TextView
            android:id="@+id/closetHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="start"
            android:paddingTop="24dp"
            android:text="@string/closet_heading"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/closetTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="start"
            android:paddingTop="18dp"
            android:text="@string/closet_top"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!--    Grid/Recycler    -->

        <TextView
            android:id="@+id/closetBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="start"
            android:paddingTop="18dp"
            android:text="@string/closet_bottom"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!--    Grid/Recycler    -->

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addToCloset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/closet_addDesc"
        app:layout_constraintBottom_toTopOf="@id/closetNavbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/plus" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/closetNavbar"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/md_theme_primaryContainer"
        android:elevation="24dp"
        android:orientation="horizontal"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/eyesthetic_navbar" />
</androidx.constraintlayout.widget.ConstraintLayout>